[gd_scene load_steps=25 format=3 uid="uid://bixhphvjc1ia8"]

[ext_resource type="Script" path="res://scripts/balloon-trip.gd" id="1_ifoyk"]
[ext_resource type="PackedScene" uid="uid://dbreo1apbaegh" path="res://scenes/characters/balloon-fighter-blue.tscn" id="3_joy5l"]
[ext_resource type="TileSet" uid="uid://dklr7gbpni7mk" path="res://scenes/tileset.tres" id="4_3cr0p"]
[ext_resource type="Texture2D" uid="uid://ha31bvfvtgh4" path="res://art/ui/trophies.png" id="5_fhgsl"]
[ext_resource type="Texture2D" uid="uid://bd38cbrj1wuyd" path="res://art/fx/platform.png" id="5_wnnrh"]
[ext_resource type="PackedScene" uid="uid://dohr38gxdfiul" path="res://scenes/trip/level-0/split.tscn" id="6_20knf"]
[ext_resource type="Theme" uid="uid://bv6xaxgvlwc1i" path="res://themes/theme.tres" id="6_jm420"]
[ext_resource type="AudioStream" uid="uid://5ur8j7bw5308" path="res://sound/music/balloon-fight-balloon-trip.wav" id="8_3w24y"]
[ext_resource type="Theme" uid="uid://ceoxr5e0y42y5" path="res://themes/menu-buttons.tres" id="8_fukd0"]
[ext_resource type="PackedScene" uid="uid://doct7j5cxamfx" path="res://scenes/ui/pause-menu.tscn" id="9_r1743"]
[ext_resource type="PackedScene" uid="uid://shehgwlt4opc" path="res://scenes/ui/high-score-list.tscn" id="10_owdas"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1gyug"]
size = Vector2(14, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_xqfll"]
atlas = ExtResource("5_wnnrh")
region = Rect2(0, 0, 15, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_m85nx"]
atlas = ExtResource("5_wnnrh")
region = Rect2(0, 12, 15, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_adxyo"]
atlas = ExtResource("5_wnnrh")
region = Rect2(0, 24, 15, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_38dc3"]
atlas = ExtResource("5_wnnrh")
region = Rect2(0, 36, 15, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_ujvvp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xqfll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m85nx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adxyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_38dc3")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_teol0"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_64fcu"]
normal = Vector2(0, 1)
distance = 5.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_uf0ru"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_nidq1"]
normal = Vector2(-1, 0)
distance = -640.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_tcbcw"]
distance = -337.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v0oyw"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.435294, 0.435294, 0.435294, 1)
anti_aliasing = false

[sub_resource type="Gradient" id="Gradient_0mqkn"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.364444, 0.706667)
colors = PackedColorArray(0.486275, 0.0313726, 0, 1, 0, 0.266667, 0, 1, 0.298039, 0.862745, 0.282353, 1)

[node name="Balloon-trip" type="Node2D"]
script = ExtResource("1_ifoyk")

[node name="Character" parent="." instance=ExtResource("3_joy5l")]
position = Vector2(552, 168)

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(0, 8)
tile_set = ExtResource("4_3cr0p")
format = 2
layer_0/tile_data = PackedInt32Array(2686976, 458752, 1, 2752512, 458752, 2, 2686977, 524288, 1, 2752513, 524288, 2, 2686978, 589824, 1, 2752514, 589824, 2, 2686979, 655360, 1, 2752515, 655360, 2, 2686980, 458752, 1, 2752516, 458752, 2, 2686981, 524288, 1, 2752517, 524288, 2, 2686982, 589824, 1, 2752518, 589824, 2, 2686983, 655360, 1, 2752519, 655360, 2, 2686984, 458752, 1, 2752520, 458752, 2, 2686985, 524288, 1, 2752521, 524288, 2, 2686986, 589824, 1, 2752522, 589824, 2, 2686987, 655360, 1, 2752523, 655360, 2, 2686988, 458752, 1, 2752524, 458752, 2, 2686989, 524288, 1, 2752525, 524288, 2, 2686990, 589824, 1, 2752526, 589824, 2, 2686991, 655360, 1, 2752527, 655360, 2, 2686992, 458752, 1, 2752528, 458752, 2, 2686993, 524288, 1, 2752529, 524288, 2, 2686994, 589824, 1, 2752530, 589824, 2, 2686995, 655360, 1, 2752531, 655360, 2, 2686996, 458752, 1, 2752532, 458752, 2, 2686997, 524288, 1, 2752533, 524288, 2, 2686998, 589824, 1, 2752534, 589824, 2, 2686999, 655360, 1, 2752535, 655360, 2, 2687000, 458752, 1, 2752536, 458752, 2, 2687001, 524288, 1, 2752537, 524288, 2, 2687002, 589824, 1, 2752538, 589824, 2, 2687003, 655360, 1, 2752539, 655360, 2, 2687004, 458752, 1, 2752540, 458752, 2, 2687005, 524288, 1, 2752541, 524288, 2, 2687006, 589824, 1, 2752542, 589824, 2, 2687007, 655360, 1, 2752543, 655360, 2, 2687008, 458752, 1, 2752544, 458752, 2, 2687009, 524288, 1, 2752545, 524288, 2, 2687010, 589824, 1, 2752546, 589824, 2, 2687011, 655360, 1, 2752547, 655360, 2, 2687012, 458752, 1, 2752548, 458752, 2, 2687013, 524288, 1, 2752549, 524288, 2, 2687014, 589824, 1, 2752550, 589824, 2, 2687015, 655360, 1, 2752551, 655360, 2, 2687016, 458752, 1, 2752552, 458752, 2, 2687017, 524288, 1, 2752553, 524288, 2, 2687018, 589824, 1, 2752554, 589824, 2, 2687019, 655360, 1, 2752555, 655360, 2, 2687020, 458752, 1, 2752556, 458752, 2, 2687021, 524288, 1, 2752557, 524288, 2, 2687022, 589824, 1, 2752558, 589824, 2, 2687023, 655360, 1, 2752559, 655360, 2, 2687024, 458752, 1, 2752560, 458752, 2, 2687025, 524288, 1, 2752561, 524288, 2, 2687026, 589824, 1, 2752562, 589824, 2, 2687027, 655360, 1, 2752563, 655360, 2, 2687028, 458752, 1, 2752564, 458752, 2, 2687029, 524288, 1, 2752565, 524288, 2, 2687030, 589824, 1, 2752566, 589824, 2, 2687031, 655360, 1, 2752567, 655360, 2, 2687032, 458752, 1, 2752568, 458752, 2, 2687033, 524288, 1, 2752569, 524288, 2, 2687034, 589824, 1, 2752570, 589824, 2, 2687035, 655360, 1, 2752571, 655360, 2, 2687036, 458752, 1, 2752572, 458752, 2, 2687037, 524288, 1, 2752573, 524288, 2, 2687038, 589824, 1, 2752574, 589824, 2, 2687039, 655360, 1, 2752575, 655360, 2, 2687040, 458752, 1, 2752576, 458752, 2, 2687041, 524288, 1, 2752577, 524288, 2, 2687042, 589824, 1, 2752578, 589824, 2, 2687043, 655360, 1, 2752579, 655360, 2, 2687044, 458752, 1, 2752580, 458752, 2, 2687045, 524288, 1, 2752581, 524288, 2, 2687046, 589824, 1, 2752582, 589824, 2, 2687047, 655360, 1, 2752583, 655360, 2, 2687048, 458752, 1, 2752584, 458752, 2, 2687049, 524288, 1, 2752585, 524288, 2, 2687050, 589824, 1, 2752586, 589824, 2, 2687051, 655360, 1, 2752587, 655360, 2, 2687052, 458752, 1, 2752588, 458752, 2, 2687053, 524288, 1, 2752589, 524288, 2, 2687054, 589824, 1, 2752590, 589824, 2, 2687055, 655360, 1, 2752591, 655360, 2, 2818048, 458752, 2, 2818049, 524288, 2, 2818050, 589824, 2, 2818051, 655360, 2, 2883584, 458752, 2, 2883585, 524288, 2, 2883586, 589824, 2, 2883587, 655360, 2, 2949120, 458752, 2, 2949121, 524288, 2, 2949122, 589824, 2, 2949123, 655360, 2, 2818052, 458752, 2, 2818053, 524288, 2, 2818054, 589824, 2, 2818055, 655360, 2, 2883588, 458752, 2, 2883589, 524288, 2, 2883590, 589824, 2, 2883591, 655360, 2, 2949124, 458752, 2, 2949125, 524288, 2, 2949126, 589824, 2, 2949127, 655360, 2, 2818056, 458752, 2, 2818057, 524288, 2, 2818058, 589824, 2, 2818059, 655360, 2, 2883592, 458752, 2, 2883593, 524288, 2, 2883594, 589824, 2, 2883595, 655360, 2, 2949128, 458752, 2, 2949129, 524288, 2, 2949130, 589824, 2, 2949131, 655360, 2, 2818060, 458752, 2, 2818061, 524288, 2, 2818062, 589824, 2, 2818063, 655360, 2, 2883596, 458752, 2, 2883597, 524288, 2, 2883598, 589824, 2, 2883599, 655360, 2, 2949132, 458752, 2, 2949133, 524288, 2, 2949134, 589824, 2, 2949135, 655360, 2, 2818064, 458752, 2, 2818065, 524288, 2, 2818066, 589824, 2, 2818067, 655360, 2, 2883600, 458752, 2, 2883601, 524288, 2, 2883602, 589824, 2, 2883603, 655360, 2, 2949136, 458752, 2, 2949137, 524288, 2, 2949138, 589824, 2, 2949139, 655360, 2, 2818068, 458752, 2, 2818069, 524288, 2, 2818070, 589824, 2, 2818071, 655360, 2, 2883604, 458752, 2, 2883605, 524288, 2, 2883606, 589824, 2, 2883607, 655360, 2, 2949140, 458752, 2, 2949141, 524288, 2, 2949142, 589824, 2, 2949143, 655360, 2, 2818072, 458752, 2, 2818073, 524288, 2, 2818074, 589824, 2, 2818075, 655360, 2, 2883608, 458752, 2, 2883609, 524288, 2, 2883610, 589824, 2, 2883611, 655360, 2, 2949144, 458752, 2, 2949145, 524288, 2, 2949146, 589824, 2, 2949147, 655360, 2, 2818076, 458752, 2, 2818077, 524288, 2, 2818078, 589824, 2, 2818079, 655360, 2, 2883612, 458752, 2, 2883613, 524288, 2, 2883614, 589824, 2, 2883615, 655360, 2, 2949148, 458752, 2, 2949149, 524288, 2, 2949150, 589824, 2, 2949151, 655360, 2, 2818080, 458752, 2, 2818081, 524288, 2, 2818082, 589824, 2, 2818083, 655360, 2, 2883616, 458752, 2, 2883617, 524288, 2, 2883618, 589824, 2, 2883619, 655360, 2, 2949152, 458752, 2, 2949153, 524288, 2, 2949154, 589824, 2, 2949155, 655360, 2, 2818084, 458752, 2, 2818085, 524288, 2, 2818086, 589824, 2, 2818087, 655360, 2, 2883620, 458752, 2, 2883621, 524288, 2, 2883622, 589824, 2, 2883623, 655360, 2, 2949156, 458752, 2, 2949157, 524288, 2, 2949158, 589824, 2, 2949159, 655360, 2, 2818088, 458752, 2, 2818089, 524288, 2, 2818090, 589824, 2, 2818091, 655360, 2, 2883624, 458752, 2, 2883625, 524288, 2, 2883626, 589824, 2, 2883627, 655360, 2, 2949160, 458752, 2, 2949161, 524288, 2, 2949162, 589824, 2, 2949163, 655360, 2, 2818092, 458752, 2, 2818093, 524288, 2, 2818094, 589824, 2, 2818095, 655360, 2, 2883628, 458752, 2, 2883629, 524288, 2, 2883630, 589824, 2, 2883631, 655360, 2, 2949164, 458752, 2, 2949165, 524288, 2, 2949166, 589824, 2, 2949167, 655360, 2, 2818096, 458752, 2, 2818097, 524288, 2, 2818098, 589824, 2, 2818099, 655360, 2, 2883632, 458752, 2, 2883633, 524288, 2, 2883634, 589824, 2, 2883635, 655360, 2, 2949168, 458752, 2, 2949169, 524288, 2, 2949170, 589824, 2, 2949171, 655360, 2, 2818100, 458752, 2, 2818101, 524288, 2, 2818102, 589824, 2, 2818103, 655360, 2, 2883636, 458752, 2, 2883637, 524288, 2, 2883638, 589824, 2, 2883639, 655360, 2, 2949172, 458752, 2, 2949173, 524288, 2, 2949174, 589824, 2, 2949175, 655360, 2, 2818104, 458752, 2, 2818105, 524288, 2, 2818106, 589824, 2, 2818107, 655360, 2, 2883640, 458752, 2, 2883641, 524288, 2, 2883642, 589824, 2, 2883643, 655360, 2, 2949176, 458752, 2, 2949177, 524288, 2, 2949178, 589824, 2, 2949179, 655360, 2, 2818108, 458752, 2, 2818109, 524288, 2, 2818110, 589824, 2, 2818111, 655360, 2, 2883644, 458752, 2, 2883645, 524288, 2, 2883646, 589824, 2, 2883647, 655360, 2, 2949180, 458752, 2, 2949181, 524288, 2, 2949182, 589824, 2, 2949183, 655360, 2, 2818112, 458752, 2, 2818113, 524288, 2, 2818114, 589824, 2, 2818115, 655360, 2, 2883648, 458752, 2, 2883649, 524288, 2, 2883650, 589824, 2, 2883651, 655360, 2, 2949184, 458752, 2, 2949185, 524288, 2, 2949186, 589824, 2, 2949187, 655360, 2, 2818116, 458752, 2, 2818117, 524288, 2, 2818118, 589824, 2, 2818119, 655360, 2, 2883652, 458752, 2, 2883653, 524288, 2, 2883654, 589824, 2, 2883655, 655360, 2, 2949188, 458752, 2, 2949189, 524288, 2, 2949190, 589824, 2, 2949191, 655360, 2, 2818120, 458752, 2, 2818121, 524288, 2, 2818122, 589824, 2, 2818123, 655360, 2, 2883656, 458752, 2, 2883657, 524288, 2, 2883658, 589824, 2, 2883659, 655360, 2, 2949192, 458752, 2, 2949193, 524288, 2, 2949194, 589824, 2, 2949195, 655360, 2, 2818124, 458752, 2, 2818125, 524288, 2, 2818126, 589824, 2, 2818127, 655360, 2, 2883660, 458752, 2, 2883661, 524288, 2, 2883662, 589824, 2, 2883663, 655360, 2, 2949196, 458752, 2, 2949197, 524288, 2, 2949198, 589824, 2, 2949199, 655360, 2, 2752434, 589824, 1, 2817970, 589824, 2, 2883506, 589824, 2, 2949042, 589824, 2, 3014578, 589824, 2, 2752435, 655360, 1, 2817971, 655360, 2, 2883507, 655360, 2, 2949043, 655360, 2, 3014579, 655360, 2, 2752436, 458752, 1, 2817972, 458752, 2, 2883508, 458752, 2, 2949044, 458752, 2, 3014580, 458752, 2, 2752437, 524288, 1, 2817973, 524288, 2, 2883509, 524288, 2, 2949045, 524288, 2, 3014581, 524288, 2, 2752438, 589824, 1, 2817974, 589824, 2, 2883510, 589824, 2, 2949046, 589824, 2, 3014582, 589824, 2, 2752439, 655360, 1, 2817975, 655360, 2, 2883511, 655360, 2, 2949047, 655360, 2, 3014583, 655360, 2, 2752440, 458752, 1, 2817976, 458752, 2, 2883512, 458752, 2, 2949048, 458752, 2, 3014584, 458752, 2, 2752441, 524288, 1, 2817977, 524288, 2, 2883513, 524288, 2, 2949049, 524288, 2, 3014585, 524288, 2, 2752442, 589824, 1, 2817978, 589824, 2, 2883514, 589824, 2, 2949050, 589824, 2, 3014586, 589824, 2, 2752443, 655360, 1, 2817979, 655360, 2, 2883515, 655360, 2, 2949051, 655360, 2, 3014587, 655360, 2, 2752444, 458752, 1, 2817980, 458752, 2, 2883516, 458752, 2, 2949052, 458752, 2, 3014588, 458752, 2, 2752445, 524288, 1, 2817981, 524288, 2, 2883517, 524288, 2, 2949053, 524288, 2, 3014589, 524288, 2, 2752446, 589824, 1, 2817982, 589824, 2, 2883518, 589824, 2, 2949054, 589824, 2, 3014590, 589824, 2, 2752447, 655360, 1, 2817983, 655360, 2, 2883519, 655360, 2, 2949055, 655360, 2, 3014591, 655360, 2, 2752448, 458752, 1, 2817984, 458752, 2, 2883520, 458752, 2, 2949056, 458752, 2, 3014592, 458752, 2, 2752449, 524288, 1, 2817985, 524288, 2, 2883521, 524288, 2, 2949057, 524288, 2, 3014593, 524288, 2, 2752450, 589824, 1, 2817986, 589824, 2, 2883522, 589824, 2, 2949058, 589824, 2, 3014594, 589824, 2, 2752451, 655360, 1, 2817987, 655360, 2, 2883523, 655360, 2, 2949059, 655360, 2, 3014595, 655360, 2, 2752452, 458752, 1, 2817988, 458752, 2, 2883524, 458752, 2, 2949060, 458752, 2, 3014596, 458752, 2, 2752453, 524288, 1, 2817989, 524288, 2, 2883525, 524288, 2, 2949061, 524288, 2, 3014597, 524288, 2, 2752454, 589824, 1, 2817990, 589824, 2, 2883526, 589824, 2, 2949062, 589824, 2, 3014598, 589824, 2, 2752455, 655360, 1, 2817991, 655360, 2, 2883527, 655360, 2, 2949063, 655360, 2, 3014599, 655360, 2, 2752456, 458752, 1, 2817992, 458752, 2, 2883528, 458752, 2, 2949064, 458752, 2, 3014600, 458752, 2, 2752457, 524288, 1, 2817993, 524288, 2, 2883529, 524288, 2, 2949065, 524288, 2, 3014601, 524288, 2, 2752458, 589824, 1, 2817994, 589824, 2, 2883530, 589824, 2, 2949066, 589824, 2, 3014602, 589824, 2, 2752459, 655360, 1, 2817995, 655360, 2, 2883531, 655360, 2, 2949067, 655360, 2, 3014603, 655360, 2, 2752460, 458752, 1, 2817996, 458752, 2, 2883532, 458752, 2, 2949068, 458752, 2, 3014604, 458752, 2, 2752461, 524288, 1, 2817997, 524288, 2, 2883533, 524288, 2, 2949069, 524288, 2, 3014605, 524288, 2, 2752462, 589824, 1, 2817998, 589824, 2, 2883534, 589824, 2, 2949070, 589824, 2, 3014606, 589824, 2, 2752463, 655360, 1, 2817999, 655360, 2, 2883535, 655360, 2, 2949071, 655360, 2, 3014607, 655360, 2, 2752464, 458752, 1, 2818000, 458752, 2, 2883536, 458752, 2, 2949072, 458752, 2, 3014608, 458752, 2, 2752465, 524288, 1, 2818001, 524288, 2, 2883537, 524288, 2, 2949073, 524288, 2, 3014609, 524288, 2, 2752466, 589824, 1, 2818002, 589824, 2, 2883538, 589824, 2, 2949074, 589824, 2, 3014610, 589824, 2, 2752467, 655360, 1, 2818003, 655360, 2, 2883539, 655360, 2, 2949075, 655360, 2, 3014611, 655360, 2, 2752468, 458752, 1, 2818004, 458752, 2, 2883540, 458752, 2, 2949076, 458752, 2, 3014612, 458752, 2, 2752469, 524288, 1, 2818005, 524288, 2, 2883541, 524288, 2, 2949077, 524288, 2, 3014613, 524288, 2, 2752470, 589824, 1, 2818006, 589824, 2, 2883542, 589824, 2, 2949078, 589824, 2, 3014614, 589824, 2, 2752471, 655360, 1, 2818007, 655360, 2, 2883543, 655360, 2, 2949079, 655360, 2, 3014615, 655360, 2, 2752472, 458752, 1, 2818008, 458752, 2, 2883544, 458752, 2, 2949080, 458752, 2, 3014616, 458752, 2, 2752473, 524288, 1, 2818009, 524288, 2, 2883545, 524288, 2, 2949081, 524288, 2, 3014617, 524288, 2, 2752474, 589824, 1, 2818010, 589824, 2, 2883546, 589824, 2, 2949082, 589824, 2, 3014618, 589824, 2, 2752475, 655360, 1, 2818011, 655360, 2, 2883547, 655360, 2, 2949083, 655360, 2, 3014619, 655360, 2, 2752476, 458752, 1, 2818012, 458752, 2, 2883548, 458752, 2, 2949084, 458752, 2, 3014620, 458752, 2, 2752477, 524288, 1, 2818013, 524288, 2, 2883549, 524288, 2, 2949085, 524288, 2, 3014621, 524288, 2, 2752478, 589824, 1, 2818014, 589824, 2, 2883550, 589824, 2, 2949086, 589824, 2, 3014622, 589824, 2, 2752479, 655360, 1, 2818015, 655360, 2, 2883551, 655360, 2, 2949087, 655360, 2, 3014623, 655360, 2, 2752480, 458752, 1, 2818016, 458752, 2, 2883552, 458752, 2, 2949088, 458752, 2, 3014624, 458752, 2, 2752481, 524288, 1, 2818017, 524288, 2, 2883553, 524288, 2, 2949089, 524288, 2, 3014625, 524288, 2, 2752482, 589824, 1, 2818018, 589824, 2, 2883554, 589824, 2, 2949090, 589824, 2, 3014626, 589824, 2, 2752483, 655360, 1, 2818019, 655360, 2, 2883555, 655360, 2, 2949091, 655360, 2, 3014627, 655360, 2, 2752484, 458752, 1, 2818020, 458752, 2, 2883556, 458752, 2, 2949092, 458752, 2, 3014628, 458752, 2, 2752485, 524288, 1, 2818021, 524288, 2, 2883557, 524288, 2, 2949093, 524288, 2, 3014629, 524288, 2, 2752486, 589824, 1, 2818022, 589824, 2, 2883558, 589824, 2, 2949094, 589824, 2, 3014630, 589824, 2, 2752487, 655360, 1, 2818023, 655360, 2, 2883559, 655360, 2, 2949095, 655360, 2, 3014631, 655360, 2, 2752488, 458752, 1, 2818024, 458752, 2, 2883560, 458752, 2, 2949096, 458752, 2, 3014632, 458752, 2, 2752489, 524288, 1, 2818025, 524288, 2, 2883561, 524288, 2, 2949097, 524288, 2, 3014633, 524288, 2, 2752490, 589824, 1, 2818026, 589824, 2, 2883562, 589824, 2, 2949098, 589824, 2, 3014634, 589824, 2, 2752491, 655360, 1, 2818027, 655360, 2, 2883563, 655360, 2, 2949099, 655360, 2, 3014635, 655360, 2, 2752492, 458752, 1, 2818028, 458752, 2, 2883564, 458752, 2, 2949100, 458752, 2, 3014636, 458752, 2, 2752493, 524288, 1, 2818029, 524288, 2, 2883565, 524288, 2, 2949101, 524288, 2, 3014637, 524288, 2, 2752494, 589824, 1, 2818030, 589824, 2, 2883566, 589824, 2, 2949102, 589824, 2, 3014638, 589824, 2, 2752495, 655360, 1, 2818031, 655360, 2, 2883567, 655360, 2, 2949103, 655360, 2, 3014639, 655360, 2, 2752496, 458752, 1, 2818032, 458752, 2, 2883568, 458752, 2, 2949104, 458752, 2, 3014640, 458752, 2, 2752497, 524288, 1, 2818033, 524288, 2, 2883569, 524288, 2, 2949105, 524288, 2, 3014641, 524288, 2, 2752498, 589824, 1, 2818034, 589824, 2, 2883570, 589824, 2, 2949106, 589824, 2, 3014642, 589824, 2, 2752499, 655360, 1, 2818035, 655360, 2, 2883571, 655360, 2, 2949107, 655360, 2, 3014643, 655360, 2, 2752500, 458752, 1, 2818036, 458752, 2, 2883572, 458752, 2, 2949108, 458752, 2, 3014644, 458752, 2, 2752501, 524288, 1, 2818037, 524288, 2, 2883573, 524288, 2, 2949109, 524288, 2, 3014645, 524288, 2, 2752502, 589824, 1, 2818038, 589824, 2, 2883574, 589824, 2, 2949110, 589824, 2, 3014646, 589824, 2, 2752503, 655360, 1, 2818039, 655360, 2, 2883575, 655360, 2, 2949111, 655360, 2, 3014647, 655360, 2, 2752504, 458752, 1, 2818040, 458752, 2, 2883576, 458752, 2, 2949112, 458752, 2, 3014648, 458752, 2, 2752505, 524288, 1, 2818041, 524288, 2, 2883577, 524288, 2, 2949113, 524288, 2, 3014649, 524288, 2, 2752506, 589824, 1, 2818042, 589824, 2, 2883578, 589824, 2, 2949114, 589824, 2, 3014650, 589824, 2, 2752507, 655360, 1, 2818043, 655360, 2, 2883579, 655360, 2, 2949115, 655360, 2, 3014651, 655360, 2, 2752508, 458752, 1, 2818044, 458752, 2, 2883580, 458752, 2, 2949116, 458752, 2, 3014652, 458752, 2, 2752509, 524288, 1, 2818045, 524288, 2, 2883581, 524288, 2, 2949117, 524288, 2, 3014653, 524288, 2, 2752510, 589824, 1, 2818046, 589824, 2, 2883582, 589824, 2, 2949118, 589824, 2, 3014654, 589824, 2, 2752511, 655360, 1, 2818047, 655360, 2, 2883583, 655360, 2, 2949119, 655360, 2, 3014655, 655360, 2, 2752432, 458752, 1, 2817968, 458752, 2, 2883504, 458752, 2, 2949040, 458752, 2, 3014576, 458752, 2, 2752433, 524288, 1, 2817969, 524288, 2, 2883505, 524288, 2, 2949041, 524288, 2, 3014577, 524288, 2)

[node name="StartingPlatform" type="StaticBody2D" parent="."]
position = Vector2(552, 191)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartingPlatform"]
position = Vector2(-1, -0.5)
shape = SubResource("RectangleShape2D_1gyug")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="StartingPlatform"]
sprite_frames = SubResource("SpriteFrames_ujvvp")
autoplay = "default"
frame_progress = 0.105368

[node name="Water" type="StaticBody2D" parent="." groups=["water"]]
position = Vector2(0, 368)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Water"]
position = Vector2(0, -24)
shape = SubResource("WorldBoundaryShape2D_teol0")

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0
editor_draw_limits = true

[node name="Walls" type="StaticBody2D" parent="Camera" groups=["bounce"]]
position = Vector2(-210, 359)
collision_mask = 0

[node name="TopEdge" type="CollisionShape2D" parent="Camera/Walls"]
position = Vector2(210, -340)
shape = SubResource("WorldBoundaryShape2D_64fcu")
one_way_collision_margin = 54.2

[node name="Sides" type="StaticBody2D" parent="Camera" groups=["bounce"]]
position = Vector2(-210, 359)
collision_layer = 4

[node name="LeftEdge" type="CollisionShape2D" parent="Camera/Sides"]
position = Vector2(210, -359)
shape = SubResource("WorldBoundaryShape2D_uf0ru")
one_way_collision_margin = 54.2

[node name="RightEdge" type="CollisionShape2D" parent="Camera/Sides"]
position = Vector2(210, -359)
shape = SubResource("WorldBoundaryShape2D_nidq1")
one_way_collision_margin = 54.2

[node name="Ocean" type="StaticBody2D" parent="Camera"]
position = Vector2(0, 8)
collision_layer = 256
collision_mask = 0

[node name="BottomEdge" type="CollisionShape2D" parent="Camera/Ocean"]
shape = SubResource("WorldBoundaryShape2D_tcbcw")
one_way_collision_margin = 54.2

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="GUI"]
anchors_preset = -1
anchor_left = -0.0078125
anchor_bottom = 0.0111111
offset_left = -3.0
offset_top = -3.0
offset_right = 643.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v0oyw")

[node name="Distance" type="HBoxContainer" parent="GUI/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Trophy" type="Control" parent="GUI/Panel/Distance"]
custom_minimum_size = Vector2(18, 16)
layout_mode = 2

[node name="Sprite" type="Sprite2D" parent="GUI/Panel/Distance/Trophy"]
position = Vector2(0, 6)
texture = ExtResource("5_fhgsl")
centered = false
region_enabled = true
region_rect = Rect2(240, 0, 16, 16)

[node name="Score" type="Label" parent="GUI/Panel/Distance"]
custom_minimum_size = Vector2(16, 14)
layout_mode = 2
theme = ExtResource("6_jm420")
theme_override_font_sizes/font_size = 14
text = "999,999,999"
vertical_alignment = 2

[node name="HighScoreList" parent="GUI" instance=ExtResource("10_owdas")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 312.0
offset_top = 168.0
offset_right = 312.0
offset_bottom = 168.0
HighScoreListName = "balloon-trip"
metadata/_edit_horizontal_guides_ = [270.0]

[node name="EndGameNav" type="HBoxContainer" parent="GUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = 124.0
offset_right = 320.0
offset_bottom = 164.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 32
alignment = 1

[node name="ExitButton" type="Button" parent="GUI/EndGameNav"]
layout_mode = 2
theme = ExtResource("8_fukd0")
text = "MAIN MENU"

[node name="TryAgainButton" type="Button" parent="GUI/EndGameNav"]
layout_mode = 2
theme = ExtResource("8_fukd0")
text = "TRY AGAIN"

[node name="PauseMenu" parent="GUI" instance=ExtResource("9_r1743")]

[node name="Stars" type="CPUParticles2D" parent="."]
position = Vector2(320, 180)
amount = 50
emission_shape = 3
emission_rect_extents = Vector2(640, 360)
gravity = Vector2(0, 0)
color_ramp = SubResource("Gradient_0mqkn")

[node name="Obstacles" type="Node2D" parent="."]
position = Vector2(0, 24)

[node name="middle" parent="Obstacles" instance=ExtResource("6_20knf")]
offset_left = 424.0
offset_right = 552.0
editor_only = true

[node name="Sounds" type="Node" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("8_3w24y")
volume_db = -10.0
bus = &"Music"

[connection signal="tree_exited" from="Character" to="." method="_game_over"]
[connection signal="pressed" from="GUI/EndGameNav/ExitButton" to="." method="return_to_menu"]
[connection signal="pressed" from="GUI/EndGameNav/TryAgainButton" to="." method="_on_try_again_button_pressed"]
